api/swim_form/src/tests/derive/form/incorrect_tag_type_enum.stderr
error: Expected a string literal
  --> src/tests/derive/form/incorrect_tag_type_enum.rs:21:22
   |
21 |         #[form(tag = 13)]
   |                      ^^
